# chess_game_state

./: README.md  basic_network.conf  basic_network_1.nn  my_torch_analyzer  my_torch_generator  pyproject.toml  test.md
datasets/: chess.txt  command.txt  test_all.txt  test_check.txt  trained_network_0_previous.nn
datasets/check/: 10_pieces.txt
datasets/checkmate/: 10_pieces.txt  many_pieces.txt
datasets/stalemate/: 10_pieces.txt  20_pieces.txt  many_pieces.txt
docs/: analyzer.md  benchmarks.md  design_choices.md  generator.md
